Update Fabric8 version and usage. (#431)
* Remove disabled tests.